--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Index.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Index.cshtml
@@ -20,9 +20,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Date)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Author.FullName)
+        </th>
         <th></th>
     </tr>
-
+     
 @foreach (var item in Model) {
     <tr>
         <td>
@@ -35,6 +38,13 @@
             @Html.DisplayFor(modelItem => item.Date)
         </td>
         <td>
+            @if (item.Author==null)
+            {
+                <i>No Author</i>
+            }
+            @Html.DisplayFor(modelItem => item.Author.FullName)
+        </td>
+        <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
@@ -43,3 +53,4 @@
 }
 
 </table>
+        
