--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Latest", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Songs", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Add New", "Index", "Posts")</li>
+                    <li>@Html.ActionLink("Songs", "Index", "Posts")</li>
+                    <li>@Html.ActionLink("Add New", "Create", "Posts")</li>
                     <li>@Html.ActionLink("Profile  ", "Index", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
