--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Home/Index.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
 @model IEnumerable<DemoBlogWasteOfTimeTeam.Models.Post>
 
 <div class="jumbotron">
-    <h1>Blog</h1>
+    <h1>Latest</h1>
+    <p>Which are the latest uploaded videos:</p>
 
 </div>
 
