--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
@@ -1,16 +1,24 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
     <title>@ViewBag.Title - BSE</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    
+         @Styles.Render("~/Content/css")
 
-</head>
+         @Scripts.Render("~/bundles/modernizr")
+
+</head> 
 <body>
-    <div class="back">
-        <img src="~/images/14169649_10208771751363196_1238687849_n.png" width="300" height="400" />
+    
+    <div >
+        <div style="position:relative; height:100px;">
+            <img src="~/images/14169649_10208771751363196_1238687849_n.png"
+                 style="position:absolute; top:-10px; left:-30px; width:400px; height:500px; border:none;" />                
+        </div>     
     </div>
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -56,6 +64,6 @@
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
-    
+
 </body>
 </html>
