--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
@@ -13,13 +13,7 @@
 
 </head> 
 <body>
-    
-    <div >
-        <div style="position:relative; height:100px;">
-            <img src="~/images/14169649_10208771751363196_1238687849_n.png"
-                 style="position:absolute; top:-10px; left:-30px; width:400px; height:500px; border:none;" />                
-        </div>     
-    </div>
+  
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
 
@@ -30,8 +24,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+                    <a href="/Home/Index" class="navbar-brand"><img src="~/images/14169649_10208771751363196_1238687849_n.png"
+     style="position:absolute; top:-10px; left:30px; width:60px; height:60px; border:none;" /> </a>
 
-                    @Html.ActionLink("Best Song", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
