--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Songs", "Index", "Posts")</li>
                         <li>@Html.ActionLink("Add New", "Create", "Posts")</li>
-                        <li>@Html.ActionLink("Profile  ", "Index", "Home")</li>
+                        <li>@Html.ActionLink("ProfileCustom  ", "MySongs", "Home")</li>
                     </ul>
 
                     @Html.Partial("_LoginPartial")
