Added category dropdown from enum, styles changed of: Songs, MySongs and Home

--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Content/Site.css
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Content/Site.css
@@ -37,3 +37,8 @@ textarea {
 .post {
     background: #e6ccb3;
 }
+
+iframe {
+    max-height: 100px !important;
+    max-width: 200px !important;
+}
