--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Create.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Create.cshtml
@@ -24,16 +24,14 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                
-                <select>
-                    <option value="punk">punk</option>
-                    <option value="rock">rock</option>
-                    <option value="metal">metal</option>
-                    <option value="hardcore">hardcore</option>
-                </select> 
-                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                @Html.EnumDropDownListFor(
+                model => model.Category,
+                "Select My Type",
+                new { @class = "form-control" })
+
+                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
