--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/Home/Index" class="navbar-brand"><img src="~/images/14169649_10208771751363196_1238687849_n.png"
-     style="position:absolute; top:-10px; left:30px; width:60px; height:60px; border:none;" /> </a>
+                    <span href="/#" class="navbar-brand"><img src="~/images/14169649_10208771751363196_1238687849_n.png"
+     style="position:absolute; top:-10px; left:30px; width:60px; height:60px; border:none;" /> </span>
 
                 </div>
                 <div class="navbar-collapse collapse">
