--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
-                    <span href="/#" class="navbar-brand"><img src="~/images/14169649_10208771751363196_1238687849_n.png"
-     style="position:absolute; top:-10px; left:30px; width:60px; height:60px; border:none;" /> </span>
+                    </button><span href="/#" class="navbar-brand"><img src="~/images/BSE_guitar-01.png"
+     style="position:absolute; top:10px; left:30px; width:70px; height:44px; border:none;" /> </span>
+                    
 
                 </div>
                 <div class="navbar-collapse collapse">
@@ -34,7 +34,7 @@
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Songs", "Index", "Posts")</li>
                         <li>@Html.ActionLink("Add New", "Create", "Posts")</li>
-                        <li>@Html.ActionLink("ProfileCustom  ", "MySongs", "Home")</li>
+                        <li>@Html.ActionLink("My Songs  ", "MySongs", "Home")</li>
                     </ul>
 
                     @Html.Partial("_LoginPartial")
