--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Home/About.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Home/About.cshtml
@@ -1,13 +1,27 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-
-<span href="/#" class="navbar-brand">
-    <img src="~/images/14169649_10208771751363196_1238687849_n.png"
-         style="position:absolute; top:-10px; left:30px; width:200px; height:400px; border:none;" />
-</span>
+<div>
+    <div style="float:left;">
 
 
-<h4>Everyone has his own favorite songs…but the music never stops. New songs are playing on the radio every day, you discover more and more new (or old) bands that happen to have big discography, not to mention the songs suggested by your “YouTube-rat” friend…</h4>
+        <img src="~/images/BSE_guitar-05.png"
+             style="position:absolute; top:10px; left:30px; width:500px; height:550px; border:none;" />
+    </div>
 
-<h4>Because you have more than one best song, and the list continues to grow…we build a platform where everyday you can add your “Best Song Ever” (of the day). Simply login and start building your playlist by adding your favorite songs and their videos.  You can also check what the other users are sharing. You never know…you might find your new “Best Song Ever”!</h4>
+    <div style="float:right; margin-left:400px";>
+           
+         <h1>About:</h1>
+
+
+            <h4>Everyone has his own favorite songs…but the music never stops. New songs are playing on the radio every day, you discover more and more new (or old) bands that happen to have big discography, not to mention the songs suggested by your “YouTube-rat” friend…</h4>
+
+            <h4>Because you have more than one best song, and the list continues to grow…we build a platform where everyday you can add your “Best Song Ever” (of the day). Simply login and start building your playlist by adding your favorite songs and their videos.  You can also check what the other users are sharing. You never know…you might find your new “Best Song Ever”!</h4>
+      
+     </div>
+</div>
+
+@Html.ActionLink("View List", "Index")
+
+
+  
