--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Details.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Details.cshtml
@@ -30,7 +30,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Video)
+           @Html.Raw(Model.Video)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Comment)
@@ -51,6 +51,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+   
     @Html.ActionLink("Back to List", "Index")
 </p>
