--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Index.cshtml
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Views/Posts/Index.cshtml
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.Category)
             </td>
             <td>
-                @Html.Raw(item.Video);
+                @Html.Raw(item.Video)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
