--- a/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Content/Site.css
+++ b/DemoBlogWasteOfTimeTeam/DemoBlogWasteOfTimeTeam/Content/Site.css
@@ -1,17 +1,10 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-image: URL("../images/rrrrr.jpg");
+    background-image: URL("../images/BackGroundImage.jpg");
+    background-position: bottom;
     background-repeat: no-repeat;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    min-width: 50%;
-    min-height: 50%;
+    background-attachment: fixed;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -41,4 +34,13 @@ textarea {
 iframe {
     max-height: 100px !important;
     max-width: 200px !important;
+
+}
+footer{
+    color:red;
+    position: fixed ;
+    bottom: 0;
+    left: 50px;
+    right: 0;
+    height:65px;
 }
